# Bankapp

./: .coverage  .flake8  .gitignore  README.md  file_parser.py  main.py  processing.py  pyproject.toml  pytest.ini  testcov.xml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_5b607bbbcb05a0c0___init___py.html  z_5b607bbbcb05a0c0_generators_py.html  z_5b607bbbcb05a0c0_masks_py.html  z_5b607bbbcb05a0c0_processing_py.html  z_5b607bbbcb05a0c0_widget_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html
project/: .flake8  README.md  pyproject.toml
project/project/src/: widget.py
project/project/src/project/src/: widget.py
project/src/: README.md  processing.py  widget.py
project/src/bankapp/: processing.py  widget.py
project/src/project/src/: masks.py  processing.py
project/tests/: test_generators.py  test_masks.py  test_processing.py  test_widget.py
src/: processing.py  widget.py
src/bankapp/: __init__.py  decorators.py  external_api.py  generators.py  logger_config.py  masks.py  masks_logger.py  processing.py  utils.py  utils_logger.py  widget.py
src/bankapp/tests/: test_generators.py  test_masks.py  test_processing.py  test_widget.py
src_bankapp/: decorators.py  generators.py  masks.py
src_bankapp/tests/: test_masks.py
tests/: test_decorators.py  test_external_api.py  test_file_parser.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_utils.py  test_utils_logger.py  test_widget.py
tests/tests/: __init__.py  test_widget.py
