[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0"
openpyxl = "^3.1"
requests = "^2.32"
types-requests = "^2.32.4.20260107"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^7.0"
pytest-mock = "^3.15"
python-dotenv = "^1.0"
flake8 = "^7.3"
black = "^25.1"
isort = "^6.0"
mypy = "^1.17"
types-openpyxl = "^3.1.5.20260322"
pandas-stubs = "^3.0.0.260204"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
namespace_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true